--- a/frudelight/about.html
+++ b/frudelight/about.html
@@ -198,7 +198,7 @@ h1 {
     <div class="container_content">
     <div class="container_content_inner">
     <div class="title">
-      <h1>Hello World</h1>
+      <h1>Know Us</h1>
     </div>
     <div class="par">
     <p>
